--- a/admin_guide/ipsec.adoc
+++ b/admin_guide/ipsec.adoc
@@ -184,6 +184,17 @@ configuration of every other node in the cluster. Using a configuration
 management tool such as Ansible to generate this file on each host is
 recommended.
 
+. This configuration also requires the full certificate subject of each node to
+be placed into the configuration for every other node.  To read this subject from
+the node's certificate, use *openssl*:
++
+----
+# openssl x509 \
+  -in /path/to/client-certificate -text | \
+  grep "Subject:" | \
+  sed 's/[[:blank:]]*Subject: //'
+----
+
 . Place the following lines into the *_/etc/ipsec.d/openshift-cluster.conf_* file on each node for every other node in the cluster:
 +
 ====
@@ -194,7 +205,7 @@ conn <other_node_hostname>
         leftrsasigkey=%cert
         leftcert=<this_node_cert_nickname> <2>
         right=<other_node_ip> <3>
-        rightid="CN=<other_node_cert_nickname>" <4>
+        rightid="<other_node_cert_full_subject>" <4>
         rightrsasigkey=%cert
         auto=start
         keyingtries=%forever
@@ -202,7 +213,7 @@ conn <other_node_hostname>
 <1> Replace <this_node_ip> with the cluster IP address of this node.
 <2> Replace <this_node_cert_nickname> with the node certificate nickname from step one.
 <3> Replace <other_node_ip> with the cluster IP address of the other node.
-<4> Replace <other_node_cert_nickname> with the other node certificate nickname from step one.
+<4> Replace <other_node_cert_full_subject> with the other node's certificate subject from just above.  For example: "O=system:nodes,CN=openshift-node-45.example.com".
 ====
 
 . Place the following in the *_/etc/ipsec.d/openshift-cluster.secrets_* file on each node:
